--- a/env/sequence.yml
+++ b/env/sequence.yml
@@ -26,6 +26,7 @@ includes:
 - ./includes/settings/tk-3dsmax.yml
 - ./includes/settings/tk-houdini.yml
 - ./includes/settings/tk-maya.yml
+- ./includes/settings/tk-blender.yml
 - ./includes/settings/tk-motionbuilder.yml
 - ./includes/settings/tk-nuke.yml
 - ./includes/settings/tk-shell.yml
@@ -39,6 +40,7 @@ engines:
   tk-3dsmax: "@settings.tk-3dsmax.sequence"
   tk-houdini: "@settings.tk-houdini.sequence"
   tk-maya: "@settings.tk-maya.sequence"
+  tk-blender: "@settings.tk-blender.sequence"
   tk-motionbuilder: "@settings.tk-motionbuilder.sequence"
   tk-nuke: "@settings.tk-nuke.sequence"
   tk-shell: "@settings.tk-shell.sequence"
